// proto/auth.proto
syntax = "proto3";

package auth;

service AuthService {
  rpc SignUp (SignUpRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string accessToken = 1;
}
